crates/rome_js_formatter/tests/specs/prettier/typescript/declare/declare_function_with_body.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\declare\\declare_function_with_body.ts"
---

# Input

```js
// Invalid, but recoverable
declare function foo() {}
declare function bar() {
  // comment
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,5 +1,5 @@
 // Invalid, but recoverable
-declare function foo() {};
+declare function foo() {}
 declare function bar() {
   // comment
-};
+}
```

# Output

```js
// Invalid, but recoverable
declare function foo() {}
declare function bar() {
  // comment
}
```


# Errors
```
declare_function_with_body.ts:2:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × A 'declare' function cannot have a function body
  
  × remove this body
  
    ┌─ declare_function_with_body.ts:2:24
    │
  2 │ declare function foo() {}
    │                        ^^
  
declare_function_with_body.ts:3:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × A 'declare' function cannot have a function body
  
  × remove this body
  
    ┌─ declare_function_with_body.ts:3:24
    │  
  3 │   declare function bar() {
    │ ┌────────────────────────^
  4 │ │   // comment
  5 │ │ }
    │ └─^
  

```


